--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "apollo-server": "^2.13.1",
     "graphql": "^15.0.0",
-    "mongoose": "^5.9.15"
+    "mongoose": "^5.9.15",
+    "nodemon": "^2.0.4"
   }
 }
